resources/skins.ubuntu.styles/components/Header.less
.mw-header {
	display: grid;
	grid-template-columns: auto 1fr auto;
	align-items: center;
	padding-top: 8px;
	padding-bottom: 8px;
	gap: @spacing-100;

	.vector-header-start {
		display: flex;
		align-items: center;
		gap: 20px;
	}

	.vector-header-search {
		display: flex;
		align-items: center;
		justify-content: center;
	}

	.vector-search-box {
		flex-grow: unset;
	}

	.vector-header-end {
		display: flex;
		align-items: center;
	}

	.search-toggle {
		// At lower resolutions the search input is hidden and a toggle is shown
		display: inline-flex;
		float: right;
		// Ensures the button has a font size of 16px
		font-size: unit( ( 16 / @font-size-browser ), rem );

		@media ( min-width: @min-width-breakpoint-desktop ) {
			// Override .cdx-button styles
			display: none !important;  /* stylelint-disable-line declaration-no-important */
		}
	}

	// The toggle inside the search column is suppressed; the one in the end column is used instead.
	.vector-header-search .search-toggle {
		display: none !important;  /* stylelint-disable-line declaration-no-important */
	}

	.vector-typeahead-search-container {
		display: none;

		@media ( min-width: @min-width-breakpoint-desktop ) {
			display: block;
		}
	}

	@media ( max-width: @max-width-breakpoint-tablet ) {
		/**
	 	 * Toggles the visibility of the search box at lower resolutions.
		 */
		&.vector-header-search-toggled {
			grid-template-columns: 1fr;

			.vector-header-start,
			.vector-header-end,
			.search-toggle {
				display: none;
			}

			.vector-typeahead-search-container {
				display: block;
				// Override default max width at lower resolutions
				max-width: none;
			}

			.vector-search-box {
				// T284242#7206507: Widen the suggestion results to the edge of the search
				// button at small resolutions.
				position: relative;
			}

			// Since the end button's corner is now right above the menu's corner, don't use a
			// rounded corner here (T310525)
			.cdx-typeahead-search--expanded .cdx-search-input__end-button {
				border-bottom-right-radius: 0;
			}
		}
	}
}

